--- a/routines.tex
+++ b/routines.tex
@@ -25,13 +25,14 @@ You can get APR and APR-util at \url{http://apr.apache.org/} \\
 \\
 To register the UDFs and SPs, connect to your database and run the script:
 \begin{verbatim}
-db2 -tvf register.ddl
+db2 -td@ -f register.ddl
 \end{verbatim}
 \newpage
 \subsection{Description of the UDFs and SPs}
 This library delivers the following routines\footnote{see Appendix \ref{rtnreference} for a reference of the UDFs and SPs}:\\
 \\
 \hyperlink{hbcrypt}{\tt bcrypt}\\
+\hyperlink{hsha256hex}{\tt sha256\_hex}\\
 \hyperlink{hsha256}{\tt sha256}\\
 \hyperlink{hsha512}{\tt sha512}\\
 \hyperlink{hphpmd5}{\tt php\_md5}\\
@@ -42,6 +43,7 @@ This library delivers the following routines\footnote{see Appendix \ref{rtnrefer
 \hyperlink{hvalidatepw}{\tt validate\_pw}\\
 \\
 The {\tt php\_md5} routine is compatible to the PHP md5 function.\\
+The {\tt sha256\_hex} routine returns a sha256 64-character hexadecimal hash.\\
 The {\tt apr\_md5}, {\tt apr\_crypt}, {\tt apr\_sha1} and {\tt bcrypt} routines are compatible to the functions used in Apache's {\tt htpasswd} utility.\\
 The {\tt apr\_sha256} routine returns the identifier {\tt \{SHA256\}} plus the base64 encoded sha256 hash.\\
 The {\tt sha256} and {\tt sha512} functions return glib2's crypt hashes (if supported).\\
