--- a/routines.tex
+++ b/routines.tex
@@ -33,6 +33,7 @@ This library delivers the following routines\footnote{see Appendix \ref{rtnrefer
 \\
 \hyperlink{hbcrypt}{\tt bcrypt}\\
 \hyperlink{hsha256hex}{\tt sha256\_hex}\\
+\hyperlink{hsha1hex}{\tt sha1\_hex}\\
 \hyperlink{hsha256}{\tt sha256}\\
 \hyperlink{hsha512}{\tt sha512}\\
 \hyperlink{hphpmd5}{\tt php\_md5}\\
@@ -44,6 +45,7 @@ This library delivers the following routines\footnote{see Appendix \ref{rtnrefer
 \\
 The {\tt php\_md5} routine is compatible to the PHP md5 function.\\
 The {\tt sha256\_hex} routine returns a sha256 64-character hexadecimal hash.\\
+The {\tt sha1\_hex} routine returns a sha1 40-character hexadecimal hash.\\
 The {\tt apr\_md5}, {\tt apr\_crypt}, {\tt apr\_sha1} and {\tt bcrypt} routines are compatible to the functions used in Apache's {\tt htpasswd} utility.\\
 The {\tt apr\_sha256} routine returns the identifier {\tt \{SHA256\}} plus the base64 encoded sha256 hash.\\
 The {\tt sha256} and {\tt sha512} functions return glib2's crypt hashes (if supported).\\
