make sure hashes do not extend col 80

--- a/udf_sp_ref.tex
+++ b/udf_sp_ref.tex
@@ -33,7 +33,8 @@ Examples:
       Value of output parameters
       --------------------------
       Parameter Name  : HASH
-      Parameter Value : $2y$05$WYSu1X6PVA0Ra.aPSjrdv.S6hOp.AYSnNRT521rmLRjD4Mj9UY6ve
+      Parameter Value : $2y$05$WYSu1X6PVA0Ra.aPSjrdv.S6hOp.AYSnNRT521rmLRjD4Mj9
+    UY6ve
 
       Return Status = 0
 \end{verbatim}
@@ -239,10 +240,10 @@ Examples:
       Value of output parameters
       --------------------------
       Parameter Name  : HASH
-      Parameter Value : $6$12345678$tlHrypdWTz6FqubBpgL/ePlxr4lZuQ8OK1zfV6zWUmGJS
-    z.5kGWwQGjg69Qm1Bm3.DvILruqA61o3EHsxSoko1
+      Parameter Value : $6$12345678$tlHrypdWTz6FqubBpgL/ePlxr4lZuQ8OK1zfV6zWUmG
+    JSz.5kGWwQGjg69Qm1Bm3.DvILruqA61o3EHsxSoko1
 
-    Return Status = 0
+      Return Status = 0
 \end{verbatim}
 \newpage
 \hypertarget{hphpmd5}{}
