fix documentclass, KOMA: paper format Letter

--- a/db2-hash-routines.tex
+++ b/db2-hash-routines.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt,letterpaper]{scrartcl}
+\documentclass[11pt]{scrartcl}
+\KOMAoptions{paper=letter}
 \usepackage{tabularx}
 \usepackage{array}
 \usepackage{verbatim}
