--- a/mod_authnz_ibmdb2.tex
+++ b/mod_authnz_ibmdb2.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt,letterpaper]{scrartcl}
+\documentclass[11pt]{scrartcl}
+\KOMAoptions{paper=letter}
 \usepackage{tabularx}
 \usepackage{array}
 \usepackage{verbatim}
